# DocuMind-Grade-Audit-Framework-Project-

./: README.md
documind/: audit_report_demo.md  pyproject.toml  run_demo.py
documind/src/: main.py
documind/src/analysis/: critic_agent.py  langgraph_workflow.py  reflector_node.py
documind/src/documind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
documind/src/evaluation/: dataset_generator.py  evaluate.py
documind/src/ingestion/: pdf_parser.py  vector_store.py
documind/src/reporting/: redliner.py  risk_engine.py  summarizer_agent.py
